--- a/buildsystem/versions.gradle
+++ b/buildsystem/versions.gradle
@@ -1,34 +1,35 @@
 ext.deps = [:]
 def versions = [:]
-versions.android_gradle_plugin = "3.1.0-alpha09"
-versions.realm_plugin          = "4.3.2"
-versions.realm_extensions      = "2.1.0"
+versions.android_gradle_plugin = "3.1.0-beta1"
+versions.realm_plugin       = "4.3.3"
+versions.realm_extensions   = "2.1.0"
 //Support
 versions.arch               = hasProperty("ARCH_VERSION") ? getProperty("ARCH_VERSION") : "1.0.0"
 versions.support            = "27.0.2"
 versions.supportAnko        = "0.10.2"
-versions.kotlin             = "1.2.20"
+versions.kotlin             = "1.2.21"
 versions.mutidex            = "1.0.2"
 //Libraries :Core
 versions.calligraphy        = "2.3.0"
 versions.dagger             = "2.13"
 versions.constraint_layout  = "1.0.2"
 versions.logger             = "2.1.1"
-versions.rxjava2            = "2.1.7"
+versions.rxjava2            = "2.1.8"
 versions.rxkotlin           = "2.2.0"
 versions.rx_android         = "2.0.1"
-versions.fresco             = "1.7.1"
+versions.fresco             = "1.8.0"
 versions.eventbus           = "3.1.1"
 versions.retrofit           = "2.3.0"
 versions.okHttp             = "3.9.1"
-versions.okHttpLogging      = "2.0.3"
-versions.reactivenetwork    = "0.12.1"
+versions.okHttpLogging      = "2.0.4"
+versions.reactivenetwork    = "0.12.2"
 //Libraries: Development
 versions.leakCanary         = "1.5.4"
 versions.blockcanary        = "1.5.0"
 versions.stetho             = "1.5.0"
 versions.realmStetho        = "2.1.0"
 //Libraries :App
+versions.exoplayer          = "2.6.1"
 versions.filedownloader     = "1.6.9"
 versions.jwtdecode          = "1.1.1"
 versions.joda               = "2.9.9"
@@ -41,7 +42,8 @@ support.app_compat          = "com.android.support:appcompat-v7:$versions.suppor
 support.recyclerview        = "com.android.support:recyclerview-v7:$versions.support"
 support.cardview            = "com.android.support:cardview-v7:$versions.support"
 support.design              = "com.android.support:design:$versions.support"
-//support.palette             = "com.android.support:palette-v7:$versions.support"
+support.leanback            = "com.android.support:leanback-v17:$versions.support"
+//support.palette           = "com.android.support:palette-v7:$versions.support"
 support.constraint_layout   = "com.android.support.constraint:constraint-layout:$versions.constraint_layout"
 deps.support = support
 /*
@@ -59,7 +61,7 @@ deps.supportAnko = supportAnko
 */
 
 def core = [:]
-//core.calligraphy            = "uk.co.chrisjenx:calligraphy:$versions.calligraphy"
+//core.calligraphy          = "uk.co.chrisjenx:calligraphy:$versions.calligraphy"
 core.fresco                 = "com.facebook.fresco:fresco:$versions.fresco"
 core.frescoOkhttp           = "com.facebook.fresco:imagepipeline-okhttp3:$versions.fresco"
 core.eventbus               = "org.greenrobot:eventbus:$versions.eventbus"
@@ -90,7 +92,8 @@ deps.arch_core = arch_core
 
 def retrofit = [:]
 retrofit.runtime            = "com.squareup.retrofit2:retrofit:$versions.retrofit"
-retrofit.gson               ="com.squareup.retrofit2:converter-gson:$versions.retrofit"
+retrofit.gson               = "com.squareup.retrofit2:converter-gson:$versions.retrofit"
+retrofit.simplexml          = "com.squareup.retrofit2:converter-simplexml:$versions.retrofit"
 retrofit.rxjava             = "com.squareup.retrofit2:adapter-rxjava2:$versions.retrofit"
 retrofit.okhttp             = "com.squareup.okhttp3:okhttp:$versions.okHttp"
 retrofit.okhttpLogging      = "com.github.ihsanbal:LoggingInterceptor:$versions.okHttpLogging"
@@ -101,14 +104,12 @@ dagger.runtime              = "com.google.dagger:dagger:$versions.dagger"
 dagger.android              = "com.google.dagger:dagger-android:$versions.dagger"
 dagger.android_support      = "com.google.dagger:dagger-android-support:$versions.dagger"
 dagger.compiler             = "com.google.dagger:dagger-compiler:$versions.dagger"
-dagger.android_support_compiler = "com.google.dagger:dagger-android-processor:$versions.dagger"
+dagger.android_compiler     = "com.google.dagger:dagger-android-processor:$versions.dagger"
 deps.dagger = dagger
 
 def library = [:]
-library.filedownloader      = "com.liulishuo.filedownloader:library:$versions.filedownloader"
-library.jwtdecode           = "com.auth0.android:jwtdecode:$versions.jwtdecode"
-library.qrcode              = "com.github.kenglxn.QRGen:android:$versions.qrcode"
-library.joda                = "joda-time:joda-time:$versions.joda"
+library.realm_extensions    = "com.github.vicpinm:krealmextensions:$versions.realm_extensions"
+library.exoplayer           = "com.google.android.exoplayer:exoplayer:$versions.exoplayer"
 deps.library = library
 
 def test = [:]
@@ -126,8 +127,6 @@ deps.kotlin = kotlin
 deps.android_gradle_plugin  = "com.android.tools.build:gradle:$versions.android_gradle_plugin"
 deps.databinding            = "com.android.databinding:compiler:$versions.android_gradle_plugin"
 deps.realm_plugin           = "io.realm:realm-gradle-plugin:$versions.realm_plugin"
-deps.realm_processor        = "io.realm:realm-annotations-processor:$versions.realm_plugin"
-deps.realm_extensions       = "com.github.vicpinm:krealmextensions:$versions.realm_extensions"
 deps.multidex               = "com.android.support:multidex:$versions.mutidex"
 ext.deps = deps
 
